// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Fix first agent prompt > keeps every flavor's text unchanged > fix1_2b0e5c0acbb469f46aa9 claude-code 1`] = `
"You are Claude Code in this repository. Repowise, a code-intelligence index, ranked the change below first among the work it found. Confirm each fact with Read and Grep before editing, and track the steps with TodoWrite.
## Fix first (\`repo\`)
**Extract lines 60-122 of quick_repo_scan into compute_info**
quick_repo_scan: CCN 15, 44 lines, nests 3 deep; 4 files import it, changed 5 times in 90 days.
## Facts
- Target: \`packages/cli/src/repowise/cli/ui/repo_scanner.py:60\` (\`quick_repo_scan\`)
- Gain: +1.7 health on this file
- Effort: S (sized by the stored plan)
- Risk: Touches 1 file; 4 files import it.
- Confidence: high. 1 of 1 step proven mechanical by the plan
- health recoverable: +1.7 (inferred)
- steps: 1 (1 mechanical)
- files that import it: 4
- changes in 90 days: 5
- file size: 149 lines
## Steps, in order
1. Extract lines 60-122 of quick_repo_scan into compute_info(repo_path) -> info (\`packages/cli/src/repowise/cli/ui/repo_scanner.py:60\`) [mechanical]
## Verify
- \`tests/unit/cli/test_repo_scanner.py\`: reaches the changed code through the call-graph
- \`tests/unit/cli/test_edenai_reachability.py\`: reaches the changed code through the call-graph
- \`tests/unit/cli/test_file_page_volume_prompt.py\`: reaches the changed code through the call-graph
- \`tests/unit/cli/test_ui_package.py\`: reaches the changed code through the call-graph

Run: \`pytest tests/unit/cli/test_edenai_reachability.py tests/unit/cli/test_file_page_volume_prompt.py tests/unit/cli/test_repo_scanner.py tests/unit/cli/test_ui_package.py\`
## Hard constraints
- **Confirm before changing.** The analysis is stored, not live; the code may have moved since it ran.
- **Keep behaviour.** This is a structural or performance change; what the code returns must not change.
- **Run Verify before and after.** If no guarding test exists, write one that pins today's behaviour first.
- **Say when it is wrong.** If the problem does not hold, or the change costs more than it saves, report that and stop.
## What I expect back
1. Whether the problem held, and what you changed.
2. The Verify run, before and after, with its result.
3. Anything you left undone, and why."
`;

exports[`Fix first agent prompt > keeps every flavor's text unchanged > fix1_2b0e5c0acbb469f46aa9 claude-code-mcp 1`] = `
"You are Claude Code in this repository, which Repowise indexes and serves over MCP. Repowise ranked the change below first among the work it found. Call the MCP lookup under "Look closer" for the full record before reading files by hand, then confirm each fact against the code.
## Fix first (\`repo\`)
**Extract lines 60-122 of quick_repo_scan into compute_info**
quick_repo_scan: CCN 15, 44 lines, nests 3 deep; 4 files import it, changed 5 times in 90 days.
## Facts
- Target: \`packages/cli/src/repowise/cli/ui/repo_scanner.py:60\` (\`quick_repo_scan\`)
- Gain: +1.7 health on this file
- Effort: S (sized by the stored plan)
- Risk: Touches 1 file; 4 files import it.
- Confidence: high. 1 of 1 step proven mechanical by the plan
- health recoverable: +1.7 (inferred)
- steps: 1 (1 mechanical)
- files that import it: 4
- changes in 90 days: 5
- file size: 149 lines
## Steps, in order
1. Extract lines 60-122 of quick_repo_scan into compute_info(repo_path) -> info (\`packages/cli/src/repowise/cli/ui/repo_scanner.py:60\`) [mechanical]
## Verify
- \`tests/unit/cli/test_repo_scanner.py\`: reaches the changed code through the call-graph
- \`tests/unit/cli/test_edenai_reachability.py\`: reaches the changed code through the call-graph
- \`tests/unit/cli/test_file_page_volume_prompt.py\`: reaches the changed code through the call-graph
- \`tests/unit/cli/test_ui_package.py\`: reaches the changed code through the call-graph

Run: \`pytest tests/unit/cli/test_edenai_reachability.py tests/unit/cli/test_file_page_volume_prompt.py tests/unit/cli/test_repo_scanner.py tests/unit/cli/test_ui_package.py\`
## Look closer (Repowise MCP)
\`get_health(opportunity_id="refop3_8ba13d978db910d160b1")\`
## Hard constraints
- **Confirm before changing.** The analysis is stored, not live; the code may have moved since it ran.
- **Keep behaviour.** This is a structural or performance change; what the code returns must not change.
- **Run Verify before and after.** If no guarding test exists, write one that pins today's behaviour first.
- **Say when it is wrong.** If the problem does not hold, or the change costs more than it saves, report that and stop.
## What I expect back
1. Whether the problem held, and what you changed.
2. The Verify run, before and after, with its result.
3. Anything you left undone, and why."
`;

exports[`Fix first agent prompt > keeps every flavor's text unchanged > fix1_2b0e5c0acbb469f46aa9 cursor 1`] = `
"Work in this repository. Repowise, a code-intelligence index, ranked the change below first among the work it found. Open the target with @file, confirm each fact, then make the change.
## Fix first (\`repo\`)
**Extract lines 60-122 of quick_repo_scan into compute_info**
quick_repo_scan: CCN 15, 44 lines, nests 3 deep; 4 files import it, changed 5 times in 90 days.
## Facts
- Target: \`packages/cli/src/repowise/cli/ui/repo_scanner.py:60\` (\`quick_repo_scan\`)
- Gain: +1.7 health on this file
- Effort: S (sized by the stored plan)
- Risk: Touches 1 file; 4 files import it.
- Confidence: high. 1 of 1 step proven mechanical by the plan
- health recoverable: +1.7 (inferred)
- steps: 1 (1 mechanical)
- files that import it: 4
- changes in 90 days: 5
- file size: 149 lines
## Steps, in order
1. Extract lines 60-122 of quick_repo_scan into compute_info(repo_path) -> info (\`packages/cli/src/repowise/cli/ui/repo_scanner.py:60\`) [mechanical]
## Verify
- \`tests/unit/cli/test_repo_scanner.py\`: reaches the changed code through the call-graph
- \`tests/unit/cli/test_edenai_reachability.py\`: reaches the changed code through the call-graph
- \`tests/unit/cli/test_file_page_volume_prompt.py\`: reaches the changed code through the call-graph
- \`tests/unit/cli/test_ui_package.py\`: reaches the changed code through the call-graph

Run: \`pytest tests/unit/cli/test_edenai_reachability.py tests/unit/cli/test_file_page_volume_prompt.py tests/unit/cli/test_repo_scanner.py tests/unit/cli/test_ui_package.py\`
## Hard constraints
- **Confirm before changing.** The analysis is stored, not live; the code may have moved since it ran.
- **Keep behaviour.** This is a structural or performance change; what the code returns must not change.
- **Run Verify before and after.** If no guarding test exists, write one that pins today's behaviour first.
- **Say when it is wrong.** If the problem does not hold, or the change costs more than it saves, report that and stop.
## What I expect back
1. Whether the problem held, and what you changed.
2. The Verify run, before and after, with its result.
3. Anything you left undone, and why."
`;

exports[`Fix first agent prompt > keeps every flavor's text unchanged > fix1_2b0e5c0acbb469f46aa9 generic 1`] = `
"You are a senior engineer in this repository. Repowise, a code-intelligence index, ranked the change below first among the work it found. Its facts come from stored analysis; treat them as leads to confirm against the code, not as ground truth.
## Fix first (\`repo\`)
**Extract lines 60-122 of quick_repo_scan into compute_info**
quick_repo_scan: CCN 15, 44 lines, nests 3 deep; 4 files import it, changed 5 times in 90 days.
## Facts
- Target: \`packages/cli/src/repowise/cli/ui/repo_scanner.py:60\` (\`quick_repo_scan\`)
- Gain: +1.7 health on this file
- Effort: S (sized by the stored plan)
- Risk: Touches 1 file; 4 files import it.
- Confidence: high. 1 of 1 step proven mechanical by the plan
- health recoverable: +1.7 (inferred)
- steps: 1 (1 mechanical)
- files that import it: 4
- changes in 90 days: 5
- file size: 149 lines
## Steps, in order
1. Extract lines 60-122 of quick_repo_scan into compute_info(repo_path) -> info (\`packages/cli/src/repowise/cli/ui/repo_scanner.py:60\`) [mechanical]
## Verify
- \`tests/unit/cli/test_repo_scanner.py\`: reaches the changed code through the call-graph
- \`tests/unit/cli/test_edenai_reachability.py\`: reaches the changed code through the call-graph
- \`tests/unit/cli/test_file_page_volume_prompt.py\`: reaches the changed code through the call-graph
- \`tests/unit/cli/test_ui_package.py\`: reaches the changed code through the call-graph

Run: \`pytest tests/unit/cli/test_edenai_reachability.py tests/unit/cli/test_file_page_volume_prompt.py tests/unit/cli/test_repo_scanner.py tests/unit/cli/test_ui_package.py\`
## Hard constraints
- **Confirm before changing.** The analysis is stored, not live; the code may have moved since it ran.
- **Keep behaviour.** This is a structural or performance change; what the code returns must not change.
- **Run Verify before and after.** If no guarding test exists, write one that pins today's behaviour first.
- **Say when it is wrong.** If the problem does not hold, or the change costs more than it saves, report that and stop.
## What I expect back
1. Whether the problem held, and what you changed.
2. The Verify run, before and after, with its result.
3. Anything you left undone, and why."
`;

exports[`Fix first agent prompt > keeps every flavor's text unchanged > fix1_8ac4c08f700f837e9087 claude-code 1`] = `
"You are Claude Code in this repository. Repowise, a code-intelligence index, ranked the change below first among the work it found. Confirm each fact with Read and Grep before editing, and track the steps with TodoWrite.
## Fix first (\`repo\`)
**Break up GraphFlow (CCN 260, 1,094 lines)**
GraphFlow: CCN 260, 1,094 lines, nests 7 deep; 4 files import it, changed 13 times in 90 days.
## Facts
- Target: \`packages/ui/src/graph/graph-flow.tsx:198\` (\`GraphFlow\`)
- Gain: up to +1.8 health on this file
- Effort: M (not sized; no stored plan covers this finding)
- Risk: Touches 1 file; 4 files import it.
- Confidence: medium. Measured from the code; no stored plan has checked a fix.
- finding: nested_complexity
- severity: critical
- files that import it: 4
- changes in 90 days: 13
## Steps, in order
1. Flatten the control flow. (\`packages/ui/src/graph/graph-flow.tsx:198\`) [judgment]
## Verify
No guarding tests found. Write a test that pins the current behaviour before you change anything.
## Hard constraints
- **Confirm before changing.** The analysis is stored, not live; the code may have moved since it ran.
- **Keep behaviour.** This is a structural or performance change; what the code returns must not change.
- **Run Verify before and after.** If no guarding test exists, write one that pins today's behaviour first.
- **Say when it is wrong.** If the problem does not hold, or the change costs more than it saves, report that and stop.
## What I expect back
1. Whether the problem held, and what you changed.
2. The Verify run, before and after, with its result.
3. Anything you left undone, and why."
`;

exports[`Fix first agent prompt > keeps every flavor's text unchanged > fix1_8ac4c08f700f837e9087 claude-code-mcp 1`] = `
"You are Claude Code in this repository, which Repowise indexes and serves over MCP. Repowise ranked the change below first among the work it found. Call the MCP lookup under "Look closer" for the full record before reading files by hand, then confirm each fact against the code.
## Fix first (\`repo\`)
**Break up GraphFlow (CCN 260, 1,094 lines)**
GraphFlow: CCN 260, 1,094 lines, nests 7 deep; 4 files import it, changed 13 times in 90 days.
## Facts
- Target: \`packages/ui/src/graph/graph-flow.tsx:198\` (\`GraphFlow\`)
- Gain: up to +1.8 health on this file
- Effort: M (not sized; no stored plan covers this finding)
- Risk: Touches 1 file; 4 files import it.
- Confidence: medium. Measured from the code; no stored plan has checked a fix.
- finding: nested_complexity
- severity: critical
- files that import it: 4
- changes in 90 days: 13
## Steps, in order
1. Flatten the control flow. (\`packages/ui/src/graph/graph-flow.tsx:198\`) [judgment]
## Verify
No guarding tests found. Write a test that pins the current behaviour before you change anything.
## Look closer (Repowise MCP)
\`get_health(targets=["packages/ui/src/graph/graph-flow.tsx"], include=["biomarkers"])\`
## Hard constraints
- **Confirm before changing.** The analysis is stored, not live; the code may have moved since it ran.
- **Keep behaviour.** This is a structural or performance change; what the code returns must not change.
- **Run Verify before and after.** If no guarding test exists, write one that pins today's behaviour first.
- **Say when it is wrong.** If the problem does not hold, or the change costs more than it saves, report that and stop.
## What I expect back
1. Whether the problem held, and what you changed.
2. The Verify run, before and after, with its result.
3. Anything you left undone, and why."
`;

exports[`Fix first agent prompt > keeps every flavor's text unchanged > fix1_8ac4c08f700f837e9087 cursor 1`] = `
"Work in this repository. Repowise, a code-intelligence index, ranked the change below first among the work it found. Open the target with @file, confirm each fact, then make the change.
## Fix first (\`repo\`)
**Break up GraphFlow (CCN 260, 1,094 lines)**
GraphFlow: CCN 260, 1,094 lines, nests 7 deep; 4 files import it, changed 13 times in 90 days.
## Facts
- Target: \`packages/ui/src/graph/graph-flow.tsx:198\` (\`GraphFlow\`)
- Gain: up to +1.8 health on this file
- Effort: M (not sized; no stored plan covers this finding)
- Risk: Touches 1 file; 4 files import it.
- Confidence: medium. Measured from the code; no stored plan has checked a fix.
- finding: nested_complexity
- severity: critical
- files that import it: 4
- changes in 90 days: 13
## Steps, in order
1. Flatten the control flow. (\`packages/ui/src/graph/graph-flow.tsx:198\`) [judgment]
## Verify
No guarding tests found. Write a test that pins the current behaviour before you change anything.
## Hard constraints
- **Confirm before changing.** The analysis is stored, not live; the code may have moved since it ran.
- **Keep behaviour.** This is a structural or performance change; what the code returns must not change.
- **Run Verify before and after.** If no guarding test exists, write one that pins today's behaviour first.
- **Say when it is wrong.** If the problem does not hold, or the change costs more than it saves, report that and stop.
## What I expect back
1. Whether the problem held, and what you changed.
2. The Verify run, before and after, with its result.
3. Anything you left undone, and why."
`;

exports[`Fix first agent prompt > keeps every flavor's text unchanged > fix1_8ac4c08f700f837e9087 generic 1`] = `
"You are a senior engineer in this repository. Repowise, a code-intelligence index, ranked the change below first among the work it found. Its facts come from stored analysis; treat them as leads to confirm against the code, not as ground truth.
## Fix first (\`repo\`)
**Break up GraphFlow (CCN 260, 1,094 lines)**
GraphFlow: CCN 260, 1,094 lines, nests 7 deep; 4 files import it, changed 13 times in 90 days.
## Facts
- Target: \`packages/ui/src/graph/graph-flow.tsx:198\` (\`GraphFlow\`)
- Gain: up to +1.8 health on this file
- Effort: M (not sized; no stored plan covers this finding)
- Risk: Touches 1 file; 4 files import it.
- Confidence: medium. Measured from the code; no stored plan has checked a fix.
- finding: nested_complexity
- severity: critical
- files that import it: 4
- changes in 90 days: 13
## Steps, in order
1. Flatten the control flow. (\`packages/ui/src/graph/graph-flow.tsx:198\`) [judgment]
## Verify
No guarding tests found. Write a test that pins the current behaviour before you change anything.
## Hard constraints
- **Confirm before changing.** The analysis is stored, not live; the code may have moved since it ran.
- **Keep behaviour.** This is a structural or performance change; what the code returns must not change.
- **Run Verify before and after.** If no guarding test exists, write one that pins today's behaviour first.
- **Say when it is wrong.** If the problem does not hold, or the change costs more than it saves, report that and stop.
## What I expect back
1. Whether the problem held, and what you changed.
2. The Verify run, before and after, with its result.
3. Anything you left undone, and why."
`;

exports[`Fix first agent prompt > keeps every flavor's text unchanged > fix1_26c2da3b4c98f8fdef56 claude-code 1`] = `
"You are Claude Code in this repository. Repowise, a code-intelligence index, ranked the change below first among the work it found. Confirm each fact with Read and Grep before editing, and track the steps with TodoWrite.
## Fix first (\`repo\`)
**Batch the database calls loops make through ensure_repo_registration**
ensure_repo_registration makes a database call once per loop iteration; 2 call sites in 2 files reach it, an entry point reaches it, the loop grows with the data.
## Facts
- Target: \`packages/server/src/repowise/server/repo_db.py\` (\`ensure_repo_registration\`)
- Gain: one database call per loop iteration, grows with the data
- Effort: M (sized by the stored plan)
- Risk: Touches 2 files.
- Confidence: medium. The shared I/O sink is proven; no concrete batch API or result-equivalence proof is available.
- call sites: 2
- files: 2
- reachable from an entry point: Yes (inferred)
- loop size: grows with data (inferred)
## Steps, in order
1. Add a form of ensure_repo_registration that takes every key at once (\`packages/server/src/repowise/server/repo_db.py\`) [judgment]
2. Collect the keys before the loop and call the batched form once (rediscover_repo_dbs) (\`packages/server/src/repowise/server/repo_db.py:274\`) [judgment]
3. Collect the keys before the loop and call the batched form once (sync_workspace) (\`packages/server/src/repowise/server/routers/workspace.py:920\`) [judgment]
## Verify
- \`tests/unit/server/test_app_lifespan.py\`: reaches the changed code through the call-graph
- \`tests/unit/server/test_app_workspace_registry.py\`: reaches the changed code through the call-graph
- \`tests/unit/server/test_workspace_search_postgres.py\`: reaches the changed code through the call-graph
- \`tests/unit/server/test_workspace_router.py\`: reaches the changed code through the call-graph

Run: \`pytest tests/unit/server/test_app_lifespan.py tests/unit/server/test_app_workspace_registry.py tests/unit/server/test_workspace_router.py tests/unit/server/test_workspace_search_postgres.py\`
## Hard constraints
- **Confirm before changing.** The analysis is stored, not live; the code may have moved since it ran.
- **Keep behaviour.** This is a structural or performance change; what the code returns must not change.
- **Run Verify before and after.** If no guarding test exists, write one that pins today's behaviour first.
- **Say when it is wrong.** If the problem does not hold, or the change costs more than it saves, report that and stop.
## What I expect back
1. Whether the problem held, and what you changed.
2. The Verify run, before and after, with its result.
3. Anything you left undone, and why."
`;

exports[`Fix first agent prompt > keeps every flavor's text unchanged > fix1_26c2da3b4c98f8fdef56 claude-code-mcp 1`] = `
"You are Claude Code in this repository, which Repowise indexes and serves over MCP. Repowise ranked the change below first among the work it found. Call the MCP lookup under "Look closer" for the full record before reading files by hand, then confirm each fact against the code.
## Fix first (\`repo\`)
**Batch the database calls loops make through ensure_repo_registration**
ensure_repo_registration makes a database call once per loop iteration; 2 call sites in 2 files reach it, an entry point reaches it, the loop grows with the data.
## Facts
- Target: \`packages/server/src/repowise/server/repo_db.py\` (\`ensure_repo_registration\`)
- Gain: one database call per loop iteration, grows with the data
- Effort: M (sized by the stored plan)
- Risk: Touches 2 files.
- Confidence: medium. The shared I/O sink is proven; no concrete batch API or result-equivalence proof is available.
- call sites: 2
- files: 2
- reachable from an entry point: Yes (inferred)
- loop size: grows with data (inferred)
## Steps, in order
1. Add a form of ensure_repo_registration that takes every key at once (\`packages/server/src/repowise/server/repo_db.py\`) [judgment]
2. Collect the keys before the loop and call the batched form once (rediscover_repo_dbs) (\`packages/server/src/repowise/server/repo_db.py:274\`) [judgment]
3. Collect the keys before the loop and call the batched form once (sync_workspace) (\`packages/server/src/repowise/server/routers/workspace.py:920\`) [judgment]
## Verify
- \`tests/unit/server/test_app_lifespan.py\`: reaches the changed code through the call-graph
- \`tests/unit/server/test_app_workspace_registry.py\`: reaches the changed code through the call-graph
- \`tests/unit/server/test_workspace_search_postgres.py\`: reaches the changed code through the call-graph
- \`tests/unit/server/test_workspace_router.py\`: reaches the changed code through the call-graph

Run: \`pytest tests/unit/server/test_app_lifespan.py tests/unit/server/test_app_workspace_registry.py tests/unit/server/test_workspace_router.py tests/unit/server/test_workspace_search_postgres.py\`
## Look closer (Repowise MCP)
\`get_health(opportunity_id="perf2_5ca551b7b7c3293951d0")\`
## Hard constraints
- **Confirm before changing.** The analysis is stored, not live; the code may have moved since it ran.
- **Keep behaviour.** This is a structural or performance change; what the code returns must not change.
- **Run Verify before and after.** If no guarding test exists, write one that pins today's behaviour first.
- **Say when it is wrong.** If the problem does not hold, or the change costs more than it saves, report that and stop.
## What I expect back
1. Whether the problem held, and what you changed.
2. The Verify run, before and after, with its result.
3. Anything you left undone, and why."
`;

exports[`Fix first agent prompt > keeps every flavor's text unchanged > fix1_26c2da3b4c98f8fdef56 cursor 1`] = `
"Work in this repository. Repowise, a code-intelligence index, ranked the change below first among the work it found. Open the target with @file, confirm each fact, then make the change.
## Fix first (\`repo\`)
**Batch the database calls loops make through ensure_repo_registration**
ensure_repo_registration makes a database call once per loop iteration; 2 call sites in 2 files reach it, an entry point reaches it, the loop grows with the data.
## Facts
- Target: \`packages/server/src/repowise/server/repo_db.py\` (\`ensure_repo_registration\`)
- Gain: one database call per loop iteration, grows with the data
- Effort: M (sized by the stored plan)
- Risk: Touches 2 files.
- Confidence: medium. The shared I/O sink is proven; no concrete batch API or result-equivalence proof is available.
- call sites: 2
- files: 2
- reachable from an entry point: Yes (inferred)
- loop size: grows with data (inferred)
## Steps, in order
1. Add a form of ensure_repo_registration that takes every key at once (\`packages/server/src/repowise/server/repo_db.py\`) [judgment]
2. Collect the keys before the loop and call the batched form once (rediscover_repo_dbs) (\`packages/server/src/repowise/server/repo_db.py:274\`) [judgment]
3. Collect the keys before the loop and call the batched form once (sync_workspace) (\`packages/server/src/repowise/server/routers/workspace.py:920\`) [judgment]
## Verify
- \`tests/unit/server/test_app_lifespan.py\`: reaches the changed code through the call-graph
- \`tests/unit/server/test_app_workspace_registry.py\`: reaches the changed code through the call-graph
- \`tests/unit/server/test_workspace_search_postgres.py\`: reaches the changed code through the call-graph
- \`tests/unit/server/test_workspace_router.py\`: reaches the changed code through the call-graph

Run: \`pytest tests/unit/server/test_app_lifespan.py tests/unit/server/test_app_workspace_registry.py tests/unit/server/test_workspace_router.py tests/unit/server/test_workspace_search_postgres.py\`
## Hard constraints
- **Confirm before changing.** The analysis is stored, not live; the code may have moved since it ran.
- **Keep behaviour.** This is a structural or performance change; what the code returns must not change.
- **Run Verify before and after.** If no guarding test exists, write one that pins today's behaviour first.
- **Say when it is wrong.** If the problem does not hold, or the change costs more than it saves, report that and stop.
## What I expect back
1. Whether the problem held, and what you changed.
2. The Verify run, before and after, with its result.
3. Anything you left undone, and why."
`;

exports[`Fix first agent prompt > keeps every flavor's text unchanged > fix1_26c2da3b4c98f8fdef56 generic 1`] = `
"You are a senior engineer in this repository. Repowise, a code-intelligence index, ranked the change below first among the work it found. Its facts come from stored analysis; treat them as leads to confirm against the code, not as ground truth.
## Fix first (\`repo\`)
**Batch the database calls loops make through ensure_repo_registration**
ensure_repo_registration makes a database call once per loop iteration; 2 call sites in 2 files reach it, an entry point reaches it, the loop grows with the data.
## Facts
- Target: \`packages/server/src/repowise/server/repo_db.py\` (\`ensure_repo_registration\`)
- Gain: one database call per loop iteration, grows with the data
- Effort: M (sized by the stored plan)
- Risk: Touches 2 files.
- Confidence: medium. The shared I/O sink is proven; no concrete batch API or result-equivalence proof is available.
- call sites: 2
- files: 2
- reachable from an entry point: Yes (inferred)
- loop size: grows with data (inferred)
## Steps, in order
1. Add a form of ensure_repo_registration that takes every key at once (\`packages/server/src/repowise/server/repo_db.py\`) [judgment]
2. Collect the keys before the loop and call the batched form once (rediscover_repo_dbs) (\`packages/server/src/repowise/server/repo_db.py:274\`) [judgment]
3. Collect the keys before the loop and call the batched form once (sync_workspace) (\`packages/server/src/repowise/server/routers/workspace.py:920\`) [judgment]
## Verify
- \`tests/unit/server/test_app_lifespan.py\`: reaches the changed code through the call-graph
- \`tests/unit/server/test_app_workspace_registry.py\`: reaches the changed code through the call-graph
- \`tests/unit/server/test_workspace_search_postgres.py\`: reaches the changed code through the call-graph
- \`tests/unit/server/test_workspace_router.py\`: reaches the changed code through the call-graph

Run: \`pytest tests/unit/server/test_app_lifespan.py tests/unit/server/test_app_workspace_registry.py tests/unit/server/test_workspace_router.py tests/unit/server/test_workspace_search_postgres.py\`
## Hard constraints
- **Confirm before changing.** The analysis is stored, not live; the code may have moved since it ran.
- **Keep behaviour.** This is a structural or performance change; what the code returns must not change.
- **Run Verify before and after.** If no guarding test exists, write one that pins today's behaviour first.
- **Say when it is wrong.** If the problem does not hold, or the change costs more than it saves, report that and stop.
## What I expect back
1. Whether the problem held, and what you changed.
2. The Verify run, before and after, with its result.
3. Anything you left undone, and why."
`;
